@@ -1,5 +1,6 @@
 package com.negodya1.vintageimprovements.compat.jei.category;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import javax.annotation.ParametersAreNonnullByDefault;
@@ -8,18 +9,26 @@ import com.negodya1.vintageimprovements.VintageImprovements;
 import com.negodya1.vintageimprovements.VintageItems;
 import com.negodya1.vintageimprovements.compat.jei.category.animations.AnimatedCurvingPress;
 import com.negodya1.vintageimprovements.content.kinetics.curving_press.CurvingRecipe;
+import com.negodya1.vintageimprovements.infrastructure.config.VintageConfig;
 import com.simibubi.create.compat.jei.category.CreateRecipeCategory;
 import com.simibubi.create.compat.jei.category.animations.AnimatedPress;
 import com.simibubi.create.content.kinetics.press.PressingRecipe;
 import com.simibubi.create.content.processing.recipe.ProcessingOutput;
 import com.simibubi.create.foundation.gui.AllGuiTextures;
 
+import com.simibubi.create.foundation.item.ItemHelper;
+import com.simibubi.create.foundation.utility.Pair;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
+import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.Ingredient;
+import org.apache.commons.lang3.mutable.MutableInt;
 
 @ParametersAreNonnullByDefault
 public class CurvingCategory extends CreateRecipeCategory<CurvingRecipe> {
@@ -32,7 +41,6 @@ public class CurvingCategory extends CreateRecipeCategory<CurvingRecipe> {
 
 	@Override
 	public void setRecipe(IRecipeLayoutBuilder builder, CurvingRecipe recipe, IFocusGroup focuses) {
-
 		ItemStack stack;
 
 		switch (recipe.getMode()) {
@@ -47,9 +55,21 @@ public class CurvingCategory extends CreateRecipeCategory<CurvingRecipe> {
 				.setBackground(getRenderedSlot(), -1, -1)
 				.addItemStack(stack);
 
-		builder.addSlot(RecipeIngredientRole.INPUT, 27, 51)
-				.setBackground(getRenderedSlot(), -1, -1)
-				.addIngredients(recipe.getIngredients().get(0));
+		List<Pair<Ingredient, MutableInt>> condensedIngredients = ItemHelper.condenseIngredients(recipe.getIngredients());
+
+		for (Pair<Ingredient, MutableInt> pair : condensedIngredients) {
+			List<ItemStack> stacks = new ArrayList<>();
+			for (ItemStack itemStack : pair.getFirst().getItems()) {
+				ItemStack copy = itemStack.copy();
+				copy.setCount(pair.getSecond().getValue());
+				stacks.add(copy);
+			}
+
+			builder.addSlot(RecipeIngredientRole.INPUT, 27, 51)
+					.setBackground(getRenderedSlot(), -1, -1)
+					.addItemStacks(stacks);
+			break;
+		}
 
 		List<ProcessingOutput> results = recipe.getRollableResults();
 		int i = 0;
@@ -69,6 +89,22 @@ public class CurvingCategory extends CreateRecipeCategory<CurvingRecipe> {
 		AllGuiTextures.JEI_DOWN_ARROW.render(graphics, 23, 32);
 
 		press.draw(graphics, getBackground().getWidth() / 2 - 17, 22, recipe.getMode());
+
+		if (recipe.getHeadDamage() != 0) {
+			if (recipe.getMode() == 5)
+				if (!new ItemStack(recipe.getItemAsHead()).isDamageableItem()) return;
+			if (recipe.getHeadDamage() < 0) {
+				if (VintageConfig.server().recipes.damageHeadAfterAutoCurvingRecipe.get() == 0) return;
+				graphics.drawCenteredString(Minecraft.getInstance().font,
+						Component.translatable(VintageImprovements.MODID + ".jei.text.curving_head_damage").append( ": "
+								+ VintageConfig.server().recipes.damageHeadAfterAutoCurvingRecipe.get()),
+						88, 75, 0xFFFFFF);
+			}
+			else graphics.drawCenteredString(Minecraft.getInstance().font,
+						Component.translatable(VintageImprovements.MODID + ".jei.text.curving_head_damage").append( ": "
+								+ recipe.getHeadDamage()),
+					88, 75, 0xFFFFFF);
+		}
 	}
 
 }
